# nanofase

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.exampe  Git command line instructions.docx  LICENSE  Makefile  Makefile-LAL-8GS84M2  Makefile.example  Makefile_old  NanoFASE model - Shortcut.lnk  README.md  babel.toml  build.rsp  classWaterBody1.f90  config.json  config.nml  data - Copy_SL.json  data - Copy_SLjson.docx  data.json  data.nc  debug.rsp  ford.md  fpm.rsp  fpm.toml  genindex.html  install.rsp  intro.html  myfiles.txt  nanofase.py  netcdf_create.py  objects.inv  output.txt  output_hydrograph.txt  (+9 more)
.github/workflows/: gh-pages.yml
_downloads/6316d035efad1368d2a95e314a4eeb91/: config.example.nml
_downloads/fea497972b53222d65d27b73ec263b75/: DefaultsModule.f90
_sources/: intro.md
_sources/developers/: io-units.md  vs-ifort-setup.md
_sources/getting-started/: building-the-model.md  running-the-model.md
_sources/users/: batch.md  speeding-up-model-runs.md  temporal-period.md
cmake/: CMakeCache.txt  cmake_install.cmake
conda.recipe/: meta.yaml  recipe.yaml
confg/: batch
config/: batch  batch_3yr  batch_config_test-scenario1.nml  batch_config_test-scenario2.nml  batch_config_test-scenario3.nml  batch_config_tio2_2000.nml  batch_config_tio2_2001.nml  batch_config_tio2_2002.nml  batch_config_tio2_2003.nml  batch_config_tio2_2004.nml  batch_config_tio2_2005.nml  batch_config_tio2_2006.nml  batch_config_tio2_2007.nml  batch_config_tio2_2008.nml  batch_config_tio2_2009.nml  batch_config_tio2_2010.nml  batch_config_tio2_2011.nml  batch_config_tio2_2012.nml  batch_config_tio2_2013.nml  batch_config_tio2_2014.nml  batch_config_tio2_2015.nml  batch_config_tio2_2016.nml  batch_config_tio2_2017.nml  batch_config_tio2_2018.nml  batch_config_tio2_2019.nml  batch_config_tio2_2020.nml  batch_sim.example.nml  batch_sim2.example.nml  batch_test  batch_test-scenario.nml  batch_thames_tio2_2000-2015.nml  batch_thames_tio2_2006-2015.nml  calibrate.nml  config.example.nml  config.nml  docker_example.nml  estuary-test_river.nml  estuary.nml  gwava-test.nml  gwava.nml  (+16 more)
config.example/: batch_config.example.nml  batch_config_test-scenario.example.nml  batch_thames_tio2_2000-2015.example.nml  config.example.nml  test-scenario.example.nml
config/ag/: batch  batch_config_ag_2000.nml  batch_config_ag_2001.nml  batch_config_ag_2002.nml  batch_config_ag_2003.nml  batch_config_ag_2004.nml  batch_config_ag_2005.nml  batch_config_ag_2006.nml  batch_config_ag_2007.nml  batch_config_ag_2008.nml  batch_config_ag_2009.nml  batch_config_ag_2010.nml  batch_config_ag_2011.nml  batch_config_ag_2012.nml  batch_config_ag_2013.nml  batch_config_ag_2014.nml  batch_config_ag_2015.nml  batch_config_ag_2016.nml  batch_config_ag_2017.nml  batch_config_ag_2018.nml  batch_config_ag_2019.nml  batch_config_ag_2020.nml
config/gwava/: config.nml
data/: bed-sediment-compact.json  bed-sediment.json  constants_test-scenario.nml  data-compact.json  data-compact.nc  data-gwava.json  data-gwava.nc  data-rm-subriver.json  data.json  data.nc  data_SL_111117.json  evap.json  gwava.json  gwava.nc  gwava_backup31072018.json  precip-ceh-gear-seathwaite-2015.json  precip.json  runoff.json  soil-profile-compact.json  soil-profile.json  spm.json  t.json  usle_C.json
data.example/: constants_test-scenario.nml  constants_tio2.nml  test-scenario-estuary.nc  test-scenario-t11.nc  test-scenario.nc
data/gwava/: data-gwava.json
data/output/: summary.md
data/output_tmp/: summary.md
data/thames/: bed-sediment-compact.json  constants_ag.nml  constants_fccco.nml  constants_tio2.nml  constants_tio2_new.nml  demands-example.json  flat.nc.aux.xml  spm-sampling-sites.csv  (+1 more)
developers/: conventions.html  io-units.html  vs-ifort-setup.html
doc/: Config.md  Conventions.ipynb  Conventions.md  Mathematical symbols.md  Quickstart.md  batch.md  calibration.md  checkpointing.md  conceptual-structure.md  config.md  conventions.md  data-interfacer.md  data-requirements.html  data-requirements.md  data-structure.md  example-workflows.md  generating-input-file.md  git-quickstart.md  io_units.md  jasmin.md  nanomaterial-form-and-state.md  output.md  overview.md  sources.md  spatial-structure.md  speeding-up-model-runs.md  styles.css  temporal-period.md  vs-ifort-setup.md
docs/: _config.yml  _toc.yml  intro.md
doxygen/: doxyfile
getting-started/: building-the-model.html  running-the-model.html  test-scenario.html
scratch/: output_sediment.csv  output_soil.csv  output_water.csv  pAyWsrMF5g9UzE.nml  pAyWsrMF5g9UzE.yaml  summary.md
src/: BmiNanofaseModule.f90  CheckpointModule.f90  CheckpointModule1.f90  DefaultsModule.f90  Globals.f08  Globals.f90  GlobalsModule.f90  UtilModule.f08  UtilModule.f90  VersionModule.f90  bmi_main.f90  classBedSedimentLayer1.f08  classBedSedimentLayer2.f08  classCrop.f90  classDatabase.f90  classModel.f08  classSampleSite.f90  main.f08  main.f90  mod_strptime.f90  spcBedSediment.f08  spcBedSedimentLayer.f08
theory/: conceptual-structure.html  intro.html
users/: batch.html  checkpointing.html  example-workflows.html  jasmin.html  output.html  speeding-up-model-runs.html  temporal-period.html
(+141 files in other folders)
